<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/imgback"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usr"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/username"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retpass"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/password"/>

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regi"
        android:textColor="@color/white"
        android:background="@drawable/btnshape"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:layout_below="@+id/repassword"/>

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:background="@drawable/btnshape"
        android:layout_below="@+id/btnsignup"/>

</RelativeLayout>