<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/imgback"
    tools:context=".view.LoginActivity">

    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usr"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/username1"/>

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnshape"
        android:textSize="18sp"
        android:layout_below="@+id/password1"/>
    <Button
        android:id="@+id/bnretour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returntxt"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnshape"
        android:textSize="18sp"
        android:layout_below="@+id/btnsignin1"/>

</RelativeLayout>